[metadata]
name = pysfer
version = 0.1
author = Yiğit Özan
author_email = yigit.muhittin.57@gmail.com
description = Pysfer is a Python library for transfering data between python procseses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metaphaz/pysfer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True